Updated archon arcana script to create card-parser compatible text

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,16 @@
                 "packs/CotA.json",
                 "CotA"
             ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Import DT spoilers",
+            "program": "${workspaceFolder}/scripts/import-aa.js",
+            "args": [
+                "packs/DT.json",
+                "DT"
+            ]
         }
     ]
 }
